--- a/index.html
+++ b/index.html
@@ -74,6 +74,34 @@
 
     </section>
 
+    <section class="subscribe">
+      <h3>Subscribe Today!</h3>
+      <form action="#">
+          <div class="name">
+            <input type="text" name="first-name" placeholder="First name">
+            <input type="text" name="last-name" placeholder="Last name">
+          </div>
+
+          <div class="phone-num">
+              <input type="text" name="phone" placeholder="Phone number">
+          </div>
+
+          <div class="street-city">
+            <input type="text" name="street" placeholder="Street Address">
+            <input type="text" name="street2" placeholder="Street Address Line 2">
+            <input type="text" name="city" placeholder="City">
+          </div>
+          
+          <div class="state-zip">
+            <input type="text" name="state" placeholder="State">
+            <input type="text" name="zip" placeholder="Zip Code">
+          </div>
+
+        <div class="submit">
+          <input type="submit" name="submit">
+        </div>
+      </form>
+    </section>
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
     </footer>
